Adding support for -d and working directory
Adding input boxes for setting the fitnesse root folder and the working
directory.

Adding fitness-standalone.jar to the agent dist folder and updating
build scripts